<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />
            <EditText
                android:id="@+id/in_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/team" />
            <EditText
                android:id="@+id/in_team"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/punkte" />
            <EditText
                android:id="@+id/in_punkte"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/siege" />
            <EditText
                android:id="@+id/in_siege"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_insert"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert"
                android:layout_weight="1"
                android:onClick="onClickInsertBtn" />
            <Button
                android:id="@+id/btn_clear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:layout_weight="1"
                android:onClick="onClickClearBtn" />
        </TableRow>
    </TableLayout>


</LinearLayout>